refactor[code refactor]: removed builder from entities and some code refactor